bpo-40150: Fix mismatched argument in RegisterWaitForSingleObject() call